<resources>
    <string name="app_name">Do4Life</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phòng khám Thái Hà</string>
    <string name="nav_header_subtitle">Địa chỉ: số 11 Thái Hà, Đống Đa, Hà Nội</string>
    <string name="tv_title">Phương Ly</string>
    <string name="tv_content">hí ae</string>
    <string name="tv_birthday">06/08/2000</string>
    <string name="tv_day">01/01/2021</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_profile">Hồ sơ</string>
    <string name="menu_scheduleExam">Danh sách lịch khám</string>
    <string name="menu_historyExam">Lịch sử khám</string>
    <string name="menu_about">Giới thiệu</string>
    <string name="menu_notification">Thông báo</string>
    <string name="menu_logout"></string>
    <string name="menu_logout1">Đăng xuất</string>
    <string name="about_pk">Phòng khám đa khoa Thái Hà là một trong những phòng khám tư nhân được xây dựng có quy mô lớn và bài bản sớm nhất tại Hà Nội. Trải qua quá trình phát triển, hiện nay phòng khám hoạt động với chuyên 6 khoa chính: nam khoa, phụ khoa, bệnh xã hội, bệnh trĩ, hôi nách và kế hoạch hóa gia đình. Mỗi năm, phòng khám Thái Hà đã khám và điều trị thành công bệnh lý đường sinh dục cho gần 40.000 bệnh nhân nam nữ, mang đến cơ hội làm cha mẹ cho hàng nghìn người.</string>
    <string name="touch_open">Nhấn để xem chi tiết</string>
    <string name="content">Bạn có một thông báo.</string>
    <string name="channel_name">channel_notification</string>
    <string name="channel_description">channel_description</string>
</resources>