<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.longhb.do4life.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.longhb.do4life.ui.profile.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_scheduleExam"
        android:name="com.longhb.do4life.ui.schedule.SlideshowFragment"
        android:label="@string/menu_scheduleExam"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_historyExam"
        android:name="com.longhb.do4life.ui.history.HistoryFragment"
        android:label="@string/menu_historyExam"
        tools:layout="@layout/history_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.longhb.do4life.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/nav_policy"
        android:name="com.longhb.do4life.ui.policy.PolicyFragment"
        android:label="@string/menu_policy"
        tools:layout="@layout/policy_fragment" />
</navigation>